--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,17 +12,17 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-md ">
+        <nav class="navbar navbar-expand-sm ">
             <div class="container">
-                <a class="navbar-brand" href="#">Boyz-n-the-Hood</a>
+                <a class="navbar-brand" href="#">Boyz<br> n-the <br> Hood</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarsExample11" expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
-                    <ul class="navbar-nav col-xxl-4 col-xl-5 col-lg-9 justify-content-lg-center">
+                <div class="collapse navbar-collapse d-lg-flex">
+                    <ul class="navbar-nav col-xxl-8 col-xl-8 col-lg-9 justify-content-lg-center">
                         <li class="nav-item">
                             <a class="nav-link " href="#">Verein</a>
                         </li>
@@ -52,12 +52,22 @@
 
     <div class="hero" style="background-image: url('/images/home.jpg');"></div>
     </div>
+
+
+    <section>
+        <div>
+            <h1>Unser Verein</h1>
+        </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
         integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous">
     </script>
+
 </body>
+
 
 </html>
