--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,7 +21,7 @@
 body {
 	font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	background-color: #fff;
-	height: 200vh;
+	height: 500vh;
 	position: relative;
 }
 
@@ -90,13 +90,13 @@ a {
 }
 
 .navbar-toggler {
-	color: yellow;
+	color: #F7C04A;
 	border-color: rgba(255, 255, 0, 0.52);
 	margin-top: 10px;
 }
 
 .navbar-toggler-item {
-	color: yellow;
+	color: #FFED00;
 	/* ToDo does not work! */
 }
 
@@ -112,6 +112,7 @@ a:hover {
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
+	background-image: url('/images/home.jpg');
 }
 
 /* Header */
@@ -131,16 +132,17 @@ header {
 }
 
 header .navbar-brand {
+	color: #FFED00;
 	text-transform: uppercase;
 	letter-spacing: .2em;
-	font-weight: 800;
+	font-weight: 900;
 	font-size: 2rem;
 	padding-top: 4px;
 }
 
-header .navbar-brand.absolute {
+/* header .navbar-brand.absolute {
 	position: absolute;
-}
+} */
 
 @media (max-width: 991.98px) {
 	header .navbar-brand.absolute {
@@ -153,18 +155,7 @@ header .navbar-brand.absolute {
 
 }
 
-header .navbar-brand {
-	color: yellow;
-}
-
-header .navbar-brand span {
-	color: yellow;
-}
-
 @media (min-width: 768px) {
-	header .navbar-brand span {
-		color: #ced4da;
-	}
 
 	header .navbar {
 		padding-top: 0;
@@ -183,7 +174,7 @@ header .navbar-brand span {
 }
 
 /* header .navbar {
-	background: yellow !important;
+	background: #FEFF86 !important;
 	padding-top: .5rem;
 	padding-bottom: .5rem;
 } */
@@ -193,13 +184,16 @@ header .navbar .nav-link {
 	padding: 8px;
 	outline: none !important;
 	font-size: 1.2rem;
-	color: yellow;
+	color: #FFED00;
 }
 
 header .navbar .nav-link:hover {
-	color: black;
+	color: #0F6292;
 }
 
+header .navbar .navbar-brand:hover {
+	color: #0F6292;
+}
 @media (max-width: 1199.98px) {
 	header .navbar .nav-link {
 		padding: .5rem 0rem;
@@ -300,7 +294,7 @@ header .navbar .dropdown-menu:before {
 
 
 header .navbar .dropdown-menu .dropdown-item:hover {
-	background: yellow;
+	background: #FFED00;
 	color: black;
 }
 
@@ -314,6 +308,7 @@ header .navbar .dropdown-menu a {
 	padding-bottom: 7px;
 }
 
+
 header .navbar .cta-btn a {
 	background: #007bff;
 	color: #fff !important;
@@ -321,7 +316,7 @@ header .navbar .cta-btn a {
 	font-size: .8rem;
 	padding: 15px 20px !important;
 	line-height: 1;
-	font-weight: bold;
+	font-weight: 900;
 	-webkit-transition: .3s all ease;
 	-o-transition: .3s all ease;
 	transition: .3s all ease;
@@ -337,3 +332,76 @@ header .navbar .cta-btn a:hover {
 .navbar>.container {
 	align-items: flex-start;
 }
+
+.Vereinsmotto {
+	display: flex;
+	align-items: center;
+}
+
+.Vereinsmotto h1 {
+	text-align: left;
+	margin-left: 50px;
+	margin-bottom: 0px;
+	padding-right: 20px;
+	font-weight: 700;
+	color:#0F6292;
+	font-size: calc(2.5rem + 3vw);
+	line-height: calc(4rem + 3vw);
+	letter-spacing: (0.15rem + 3vw); 
+}
+
+.Vereinsinfo {
+	display: flex;
+	align-items: flex-start;
+	flex-direction: column;
+	row-gap: 100px;
+	justify-content: center;
+	color:#0F6292;
+	padding-left: 10px;
+	/* grid-column: 1/3; */
+}
+
+.logo {
+	position: relative;
+	object-fit: cover;
+	background-image: url('/images/logo-bw.png');
+	background-size: calc(150% - 20vw);
+	background-repeat: no-repeat;
+	background-position: 200px -0px ;
+}
+
+.grid-container-Verein {
+	display: grid;
+	grid-template-rows: calc(250px + 35vh);
+	grid-template-columns: 3fr 2fr calc(200px + 30vw);
+}
+
+#section-Verein p {
+	color:#0F6292;
+	font-size: calc(1rem + 1vw);
+}
+/* Test Section */
+/* .test {
+	position: sticky;
+	bottom: 0px;
+	width: 50%;
+	z-index: -1;
+	margin-left: 66%;
+}
+
+.aos-test {
+	width: 30%;
+}
+
+.hero-logo {
+	position: sticky;
+	bottom: 0px;
+	width: 50%;
+	z-index: 1;
+	margin-left: 66%;
+}
+
+
+.Vereins-text {
+	width: 60%;
+} */
