--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,13 @@
     <title>BntH</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:400,600,700&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:400,600,700,800,900&amp;display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+    <!-- aos library https://michalsnik.github.io/aos/ -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
 
 <body>
@@ -16,15 +20,14 @@
             <div class="container">
                 <a class="navbar-brand" href="#">Boyz<br> n-the <br> Hood</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarsExample11" expanded="false"
-                    aria-label="Toggle navigation">
+                    data-bs-target="#navbarsExample11" expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
                 <div class="collapse navbar-collapse d-lg-flex">
                     <ul class="navbar-nav col-xxl-8 col-xl-8 col-lg-9 justify-content-lg-center">
                         <li class="nav-item">
-                            <a class="nav-link " href="#">Verein</a>
+                            <a class="nav-link " href="#section-Verein">Verein</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Mitglieder</a>
@@ -50,21 +53,50 @@
         </nav>
     </header>
 
-    <div class="hero" style="background-image: url('/images/home.jpg');"></div>
-    </div>
+    <div class="hero"></div>
 
+    <!-- <section id="section-Verein">
+        <div class="row">
+            <div class="col-4">
+                <h1 class="Vereinsmotto h-100">
+                    Freunde<br> für's<br> Leben
+                </h1>
+            </div>
+            <div class="col-3" style="background-color: yellow;">
 
-    <section>
-        <div>
-            <h1>Unser Verein</h1>
+            </div>
+            <div class="col-5" style="background-color: aqua">
+                <img data-aos="zoom-out" data-aos-delay="100" class="aos-init aos-animate logo"
+                    src="images/logo-bw.png" alt="logo black/white">
+            </div>
+        </div>
+    </section> -->
+    <section id="section-Verein">
+        <div class="grid-container-Verein">
+            <div class="Vereinsmotto">
+                <h1>
+                    Freunde<br> für's<br> Leben
+                </h1>
+            </div>
+            <div class="Vereinsinfo">
+                <p>Satzung</p>
+                <p>Historie</p>
+            </div>
+            <div class="logo">
+            </div>
         </div>
     </section>
-
+    <section style="background-color: blue; z-index: 1; height: 100vh;">
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
         integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous">
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 
 </body>
