--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,22 +1,3 @@
-.footer-padding {
-	padding-bottom: 40px;
-}
-
-.footer {
-	text-align: center;
-	bottom: 0;
-	width: 100%;
-	height: 60px;
-	background-color: #1abc9c;
-}
-
-.footer p {
-	margin-top: 20px;
-	font-size: 12px;
-	bottom: 0;
-	padding: 20px;
-	color: #fff;
-}
 
 body {
 	font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -117,7 +98,7 @@ a:hover {
 
 /* Header */
 header {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -145,9 +126,6 @@ header .navbar-brand {
 } */
 
 @media (max-width: 991.98px) {
-	header .navbar-brand.absolute {
-		position: relative;
-	}
 
 	.hero {
 		height: 70vh;
@@ -194,6 +172,7 @@ header .navbar .nav-link:hover {
 header .navbar .navbar-brand:hover {
 	color: #0F6292;
 }
+
 @media (max-width: 1199.98px) {
 	header .navbar .nav-link {
 		padding: .5rem 0rem;
@@ -341,13 +320,13 @@ header .navbar .cta-btn a:hover {
 .Vereinsmotto h1 {
 	text-align: left;
 	margin-left: 50px;
-	margin-bottom: 0px;
+	margin-bottom: 100px;
 	padding-right: 20px;
 	font-weight: 700;
-	color:#0F6292;
+	color: #0F6292;
 	font-size: calc(2.5rem + 3vw);
 	line-height: calc(4rem + 3vw);
-	letter-spacing: (0.15rem + 3vw); 
+	letter-spacing: (0.15rem + 3vw);
 }
 
 .Vereinsinfo {
@@ -356,30 +335,50 @@ header .navbar .cta-btn a:hover {
 	flex-direction: column;
 	row-gap: 100px;
 	justify-content: center;
-	color:#0F6292;
+	color: #0F6292;
 	padding-left: 10px;
 	/* grid-column: 1/3; */
 }
 
-.logo {
+.logo-background {
 	position: relative;
 	object-fit: cover;
 	background-image: url('/images/logo-bw.png');
-	background-size: calc(150% - 20vw);
+	background-size: calc(180% - 20vw);
 	background-repeat: no-repeat;
-	background-position: 200px -0px ;
+	background-position: 150px -0px;
 }
 
 .grid-container-Verein {
 	display: grid;
-	grid-template-rows: calc(250px + 35vh);
+	grid-template-rows: 100vh;
 	grid-template-columns: 3fr 2fr calc(200px + 30vw);
 }
 
 #section-Verein p {
-	color:#0F6292;
+	color: #0F6292;
 	font-size: calc(1rem + 1vw);
+	padding-left: 30px;
 }
+
+.mitglieder-background {
+	position: relative;
+}
+.mitglieder-background:before {
+	content: ' ';
+	display: block;
+	position: absolute;
+	left: -150px;
+	top: 0;
+	width: 130%;
+	height: 100vh;
+	opacity: 0.6;
+	background-image: url('/images/mitglieder.jpeg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: -150px 0;
+}
+
 /* Test Section */
 /* .test {
 	position: sticky;
