Hide/Show Navbar based on scrolling direction

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm sticky-top">
+        <nav class="navbar navbar-expand-sm sticky-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="#">Boyz<br> n-the <br> Hood</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -144,7 +144,7 @@
     <script>
         AOS.init();
     </script>
-
+    <script src="/js/scripts.js"></script>
 </body>
 
 
