--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
 	font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	background-color: #fff;
@@ -106,6 +105,7 @@ header {
 	padding: 0px 0;
 }
 
+
 @media (min-width: 768px) {
 	header {
 		padding: 30px 0;
@@ -130,7 +130,47 @@ header .navbar-brand {
 	.hero {
 		height: 70vh;
 	}
+}
 
+@media (min-width: 992px) {
+	#mainNav {
+		transition: background-color 0.2s;
+		/* Force Hardware Acceleration in WebKit */
+		transform: translate3d(0, 0, 0);
+		-webkit-backface-visibility: hidden;
+		backface-visibility: hidden;
+	}
+
+	#mainNav.is-fixed {
+		/* when the user scrolls down, we hide the header right above the viewport */
+		position: relative;
+		top: -219px;
+		transition: transform 0.2s;
+		background-color:black; 
+	}
+
+	#mainNav.is-fixed .navbar-brand {
+		color: #FFED00;
+	}
+
+	#mainNav.is-fixed .navbar-brand:focus,
+	#mainNav.is-fixed .navbar-brand:hover {
+		color: #0085A1;
+	}
+
+	#mainNav.is-fixed .navbar-nav>li.nav-item>a {
+		color: #FFED00;
+	}
+
+	#mainNav.is-fixed .navbar-nav>li.nav-item>a:focus,
+	#mainNav.is-fixed .navbar-nav>li.nav-item>a:hover {
+		color: #0085A1;
+	}
+
+	#mainNav.is-visible {
+		/* if the user changes the scrolling direction, we show the header */
+		transform: translate3d(0, 100%, 0);
+	}
 }
 
 @media (min-width: 768px) {
@@ -364,6 +404,7 @@ header .navbar .cta-btn a:hover {
 .mitglieder-background {
 	position: relative;
 }
+
 .mitglieder-background:before {
 	content: ' ';
 	display: block;
