--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,14 +18,13 @@
     <header>
         <nav class="navbar navbar-expand-sm sticky-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#">Boyz<br> n-the <br> Hood</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarsExample11" expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse d-lg-flex">
-                    <ul class="navbar-nav col-xxl-8 col-xl-8 col-lg-9 justify-content-lg-center">
+                <div class="collapse navbar-collapse justify-content-center d-lg-flex">
+                    <ul class="navbar-nav justify-content-lg-center">
                         <li class="nav-item">
                             <a class="nav-link " href="#section-Verein">Verein</a>
                         </li>
@@ -49,45 +48,10 @@
             </div>
         </nav>
     </header>
-    <!-- <header>
-        <nav class="navbar navbar-expand-sm sticky-top">
-            <div class="container">
-                <a class="navbar-brand" href="#">Boyz<br> n-the <br> Hood</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarsExample11" expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
 
-                <div class="collapse navbar-collapse d-lg-flex">
-                    <ul class="navbar-nav col-xxl-8 col-xl-8 col-lg-9 justify-content-lg-center">
-                        <li class="nav-item">
-                            <a class="nav-link " href="#section-Verein">Verein</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#section-Mitglieder">Mitglieder</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Historie</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
-                                aria-expanded="false">Reisen</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Nizza 2017</a></li>
-                                <li><a class="dropdown-item" href="#">Dublin 2018</a></li>
-                                <li><a class="dropdown-item" href="#">Albanien 2019</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <!-- <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                        <button class="btn btn-primary">Button</button>
-                    </div> -->
+    <div class="hero">
+        <h1 class="vereinsname">Boyz<br> n-the <br> Hood</h1>
     </div>
-    </div>
-    </nav>
-    </header>
-
-    <div class="hero"></div>
 
     <!-- <section id="section-Verein">
         <div class="row">
@@ -126,9 +90,8 @@
     </section>
     <section id="section-Mitglieder">
         <div class="mitglieder-background">
-
-
         </div>
+        <h1 class="vereinsname">Boyz<br> n-the <br> Hood</h1>
     </section>
 
 
