--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm sticky-top" id="mainNav">
+        <nav class="navbar navbar-expand-sm justify-content-center" id="mainNav">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarsExample11" expanded="false" aria-label="Toggle navigation">
@@ -25,16 +25,16 @@
 
                 <div class="collapse navbar-collapse justify-content-center d-lg-flex">
                     <ul class="navbar-nav justify-content-lg-center">
-                        <li class="nav-item">
+                        <li class="nav-item nav-item-left">
                             <a class="nav-link " href="#section-Verein">Verein</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#section-Mitglieder">Mitglieder</a>
+                            <a class="nav-link nav-link-1" href="#section-Mitglieder">Mitglieder</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Historie</a>
+                            <a class="nav-link nav-link-2" href="#">Historie</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item dropdown nav-item-right">
                             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
                                 aria-expanded="false">Reisen</a>
                             <ul class="dropdown-menu">
@@ -96,7 +96,7 @@
 
 
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
         integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous">
     </script>
@@ -107,7 +107,8 @@
     <script>
         AOS.init();
     </script>
-    <script src="/js/scripts.js"></script>
+    <script src="/js/navbarScrolling.js"></script>
+    <script src="/js/ownScripts.js"></script>
 </body>
 
 
