--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,7 +91,46 @@
     <section id="section-Mitglieder">
         <div class="mitglieder-background">
         </div>
-        <h1 class="vereinsname">Boyz<br> n-the <br> Hood</h1>
+        <div class="grid-container-Mitglieder">
+
+            <h1 class="vereinsname">Boyz<br> n-the <br> Hood</h1>
+
+            <div class="card">
+                <div class="front" style="background-image: url('/images/Manu.jpg');">
+                    <!-- <p class="large">Manuel Rondelli</p> -->
+                </div>
+                <div class="back">
+                    <div>
+                        <div class="name">Manuel Rondelli</div>
+                        <p class="zitat">"Ich les leer!"</p>
+                        <p class="bio">
+                            Als Präsident auf Lebenszeit unser Fels in der Brandung.
+                        </p>
+
+                        <!-- <a href="#" class="button">Hit me</a> -->
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="front" style="background-image: url('/images/Basti.jpg');">
+                    <!-- <p class="large">Manuel Rondelli</p> -->
+                </div>
+                <div class="back">
+                    <div>
+                        <div class="name">Sebastian Ghanbari</div>
+                        <p class="zitat">"I gfrier's raus"</p>
+                        <p class="bio">
+                            Der Puls jedes Abends, das Salz des Meeres, ein Tausendsassa und einmalig.
+                        </p>
+
+                        <!-- <a href="#" class="button">Hit me</a> -->
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
