--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,52 +88,83 @@
             </div>
         </div>
     </section>
+
+
     <section id="section-Mitglieder">
         <div class="mitglieder-background">
         </div>
+        <h1 class="vereinsname">Boyz<br> n-the <br> Hood</h1>
+
         <div class="grid-container-Mitglieder">
-
-            <h1 class="vereinsname">Boyz<br> n-the <br> Hood</h1>
-
-            <div class="card">
-                <div class="front" style="background-image: url('/images/Manu.jpg');">
-                    <!-- <p class="large">Manuel Rondelli</p> -->
-                </div>
-                <div class="back">
-                    <div>
-                        <div class="name">Manuel Rondelli</div>
-                        <p class="zitat">"Ich les leer!"</p>
-                        <p class="bio">
-                            Als Präsident auf Lebenszeit unser Fels in der Brandung.
-                        </p>
-
-                        <!-- <a href="#" class="button">Hit me</a> -->
-
+            <div class="carousel-container">
+                <div id="carouselExample" class="carousel slide carousel-dark">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="card">
+                                <!-- ToDo Scale Bastis Image-->
+                                <div class="front" style="background-image: url('/images/Basti.jpg');">
+                                </div>
+                                <div class="back">
+                                    <div>
+                                        <div class="name">Sebastian<br> Ghanbari</div>
+                                        <p class="zitat">"I gfrier's naus"</p>
+                                        <p class="bio">
+                                            Der Puls jedes Abends, das Salz des Meeres, schlicht: ein einmaliger
+                                            Tausendsassa.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="card">
+                                <div class="front" style="background-image: url('/images/Manu.jpg');">
+                                </div>
+                                <div class="back">
+                                    <div>
+                                        <div class="name">Manuel Rondelli</div>
+                                        <p class="zitat">"Ich les leer!"</p>
+                                        <p class="bio">
+                                            Unser Präsident, Fels in der Brandung und nicht zuletzt der <a
+                                                href="https://www.youtube.com/watch?v=9lmQidSrgPw"
+                                                target="_blank">Wellengott</a> persönlich.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="card">
+                                <div class="front" style="background-image: url('/images/Jakob.jpg');">
+                                </div>
+                                <div class="back">
+                                    <div>
+                                        <div class="name">Jakob Timmermann</div>
+                                        <p class="zitat">"Alle vier unsicher!"</p>
+                                        <p class="bio">
+                                            Wann schon hat die Welt einen Protokollanten schon jemals so ausschweifend tanzen gesehen?
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-            </div>
 
-            <div class="card">
-                <div class="front" style="background-image: url('/images/Basti.jpg');">
-                    <!-- <p class="large">Manuel Rondelli</p> -->
-                </div>
-                <div class="back">
-                    <div>
-                        <div class="name">Sebastian Ghanbari</div>
-                        <p class="zitat">"I gfrier's raus"</p>
-                        <p class="bio">
-                            Der Puls jedes Abends, das Salz des Meeres, ein Tausendsassa und einmalig.
-                        </p>
-
-                        <!-- <a href="#" class="button">Hit me</a> -->
-
-                    </div>
-                </div>
             </div>
         </div>
+
     </section>
-
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
